--- a/.github/workflows/push_to_server.yml
+++ b/.github/workflows/push_to_server.yml
@@ -20,7 +20,7 @@ on:
           uses: SamKirkland/FTP-Deploy-Action@4.0.0
           with:
             server: ideaux.in
-            username: ${{ secrets.ftp_user }}
-            password: ${{ secrets.ftp_password }}
+            username: ${{ secrets.FTP_USER }}
+            password: ${{ secrets.FTP_PASSWORD }}
             server-dir: ./test/
             local-dir: ./dist/
