--- a/.github/workflows/push_to_server.yml
+++ b/.github/workflows/push_to_server.yml
@@ -1,8 +1,9 @@
 name: Deploy Action
 on: 
   push: 
-    branches: ['main']
-    jobs: 
+    branches:
+      - main
+    jobs:
       deploy-to-server:
         runs-on: ubuntu-latest
         steps:
@@ -20,7 +21,7 @@ on:
           uses: SamKirkland/FTP-Deploy-Action@4.0.0
           with:
             server: ideaux.in
-            username: ${{ secrets.FTP_USER }}
-            password: ${{ secrets.FTP_PASSWORD }}
-            server-dir: ./test/
-            local-dir: ./dist/
+              username: ${{ secrets.FTP_USER }}
+              password: ${{ secrets.FTP_PASSWORD }}
+              server-dir: ./test/
+              local-dir: ./dist/
