--- a/.github/workflows/push_to_server.yml
+++ b/.github/workflows/push_to_server.yml
@@ -8,15 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 🚚 Getting Latest code
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     - name: 🎀 Setting up environment
-    - uses: actions/setup-node@v2
+      uses: actions/setup-node@v2
       with:
         node-version: '14'
     - name: 💣 Installing dependencies
-    - run: npm install
+      run: npm install
     - name: 🔨 Building Project
-    - run: npm run build
+      run: npm run build
     - name: 📂 Sync files to server
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
