--- a/.github/workflows/push_to_server.yml
+++ b/.github/workflows/push_to_server.yml
@@ -1,8 +1,9 @@
 name: Deploy Action
 on: 
   push: 
-    branches: ['main']
-    jobs: 
+    branches:
+      - main
+    jobs:
       deploy-to-server:
         runs-on: ubuntu-latest
         steps:
